--- a/style.css
+++ b/style.css
@@ -1,30 +1,44 @@
-
-.maintenance-mode {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    padding: 20px;
-    background-color: #f0f0f0;
-    color: #333;
-    text-align: center;
-}
-.maintenance-mode h1 {
-    font-size: 2em;
-    margin-bottom: 1em;
-}
-.maintenance-mode p {
-    font-size: 1em;
-    margin-bottom: 1em;
+body, html {
+  background: #EEEEF4;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  cursor: default;
 }
 
+.construction-message {
+  position: absolute;
+  top: 25%;
+  width: 100%;
+}
 
-@media (max-width: 600px) {
-    .maintenance-mode h1 {
-        font-size: 1.5em;
-    }
-    .maintenance-mode p {
-        font-size: 0.875em;
-    }
+h1 {
+  color: #E43;
+  font-weight: 100;
+  font-size: 3em;
+}
+
+h2 {
+  color: #333333;
+  font-weight: 300;
+  font-size: 1.5em;
+}
+
+a {
+  font-weight: 300;
+  color: #E43;
+  text-decoration: none;
+  font-size: 1.5em;
+}
+
+span {
+  color: #E43;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  margin-left: 10px;
 }
